@@ -19,7 +19,7 @@ func init() {
 	// Packed Files
 	// spec/filebeat.yml
 	// spec/metricbeat.yml
-	unpacked := packer.MustUnpack("eJzsV09zq7od3fdj3HWnD0RwS2fuwpCHgDjkGsdIaGdJCWBLhgnYGDr97h1hjLF9b/u67EwXGWIh/f6e3zniH9+q8oP99pmLD/qxqf/SSvHt79+odGvyXqSRFBVBgUjw8iUB+u4tt+UGnUQi44zPy4xJ3r3lNvVz3fXzJvX3oeBe3CykqOjKFFS6OYXx7gciGfVC0e+537uPBMV2leBILGR8SFBQEbS0iHQrBtb5wpnni/X5SZF7SBAXFMUH7pg1BZH4gdOaQXe7aXVJYSy441e+49fRSj2DOkFmRkBcE2RqU/vcC3SyCrgjwyOVpCRG3Pbv3ouUGEGTNGXL0UmwrnhZrOySylIkRvS5QeaO4HTm5PPUd2ztA9viLbcrCnjnpEXtw/iJe0Gm9lIoOu5aJYdxrez4zjz1PTvjMJ35MMo4dDuq/IK4G+z1e99yu6R7W+fe63AmOl7Xwo57gUiQPvjTM/Z8b1scmBdrzAg1JuOM4oudQKcw7t7SIlW/Fyt7Sw3bxEZ0xOBUMmM55HX+2+BI0Pci5Z5oyLIY14d4rnGcz9Q+DI/ME58cWufcL3E5N7k1TFpbgsOOGkE39cfh32a+d43ZybWU4Exj0t1y16o2ONQwEBpB+pgDg662eS7SDTIbjqOOGVFLkFuzprjJ4X6993WpU9P3uE7w/NLXJsFR8diHh/qp2A4MnDIO1ze1u8T1UDvVL88WbDutjVo/HYnxOuufzWS/M08JJoLul0ei5vG9SCm09lNfvmMLLtVMWB2HUUm3fb67DXq68xGDfg6MaMtUbDBsfmFHJ9585nvxjs1vY1G+FyA6JqBWOaQEWtsNiNs7OxUF7MhkvNvg8JOB05GD05F0RXpee33MvbW6DxyqcwoDpjpDmuKMASkqDuMWG4pHYnGdpVBQGG85tNqHXsFafNxhl0u34uimf8rfEIt2VzMt5ShqRmx70fZSi8XK3lEQfhHsX8/e5KVsia7vUz+jpKReJJiwQIJOOsGvF5x1RPGpER1VLS8YHt59Ebyb+XDkrCHnuxqoOBWXLXsM9/N8yY/sg6PC/p1djXZFX9MLt09rPM4ViCuCQk3N6KReE/4f144cRw3HyzGeDYhNpnKS6xcOMqHwuIJut1KziF+LANd04v9wiQ9jrfSdRPq/ZxnTzIyiuFPcTlbpnhqxpmY1aJs0AHGV4FDboLAjyG0TkO4Xznw/9GC/6GPjXwkiX8mKVb7De35WfLtxWOmk379/+/NZ+uRH/ZWzn4jfO4o1JsV2ELstRcuZD3XBvaBMwCCKONizrkhROwpOR3CkM8csKdQOBJlZIk+CPOsyQaeOrG7E6bJXEVpDoauR/ySaUs+odPcE6YoQDhRZO/KuPy2wnSWgqonyhZf/TjSv9nHUcrTO8bLcUmDKDeI669+tZz7kLYOvLwxavYDRfagl6FSdgaClFFmAxFYPhgs4rqSpfFq7Xjxbc7cwQgUGQVemSVGTj0ThReoCIfhzofI6Ei+uCH49EKcnAo0g7fCB9Goho5KBc8x++l+Jck1w1CqQ/F+Y/3eF+acCoFvGBkcFNgJBQPw01vknpM/keua7T4eX1hrxEMzvSc6/vwwobGsEB5/3ovGLM+ecQGy+5fY4YwN27ki/FxM1e31uFLnNr2o2nB8xPyH8jO7D/tKMDV5ymH0yGe8JzprrPE5w50Umg+tpz1vFcThPf1s/n/p5+ZE/fb2sHmt0tqN8pDPfifq91zwCMfDl1LZk0lJ4mu6d9HaY9eWI9TpBtcDAbZl0zZv4ocKUduVdIxR8/oD3MWYy1myI7cxTvZDezM+5T5Nzy6mQ19QgAoMeS9O8fi7If+jMmVPIILYJsJpxHyQtBdoDloZa3eiNOsv6jxhd3Is8neqV0p9HnlIfTD3P3FxKto+XqSnWbuz+QdF39rwg6Gl2FvIzL7w48V8RuMnnMOqErlsvq7kMcttPcPim8mOG0rR1EQBL556tc6cXckGh23EotgzEGZNhEbSNiuEq/s58vwGu3IDf+//VJYwZUcZAun9ZFt+//fNP/woAAP//ypoPSg==")
+	unpacked := packer.MustUnpack("eJzsV02To7oV3edn9DapBES7E1I1C0M/BNhNj3E3EtpZkhuwJUw1+ANS+e8pCRsb98xLTb3tW0x5GqT7ce6951z+81BXa/aPj0Ks6XrV/L2V4uHfD1R6DXnbZbEUNUGhSPFilgJz+1o4coVOIpVJzqdVziTvXguHBoXpBcUxC8pIcD85zqWo6XIiqPQKCpPtd0Ry6kdCn7k/W8aCYqdOcSzmMtmnKKwJWthEejUD78XcnRbz9/6XIm+fIi4oSvbcnTQUxOI7zhoGvc2qNSWFieBuUAdu0MRL9Rs2KZrkBCQNQRPj1j73Q5MsQ+7K6EAlqYiVtPrd2y4jVnhMj1XL0UmwbjebL52KykqkVvyxQpMtwdmTW0yzwHWMNXbEa+HUFPDOzXZNAJNH7oe5Okuh6LhnVxwmjbITuNMs8J2cw+wpgHHOoddR5Rck3dmePvtaOBUtHZP7L+c78eH6LOq4H4oUmWd/Zs6e722LPfMTg1mRwWSSU3yxE5oUJt1rtsvU3/Ols6GWM8HAq6lnG9S06xWOjMv7G99Xn8V0eEctIljJ2xWOFQYyRaeOLG7uwuQxBcmRP+8y1IaDDV1/Kbb971ATXWMOhUFhX29dV+CVpK/lPkWmYJaTp+e+SIG9Z1bcpkjsuf/S38eRwMA2ue+Y3A35r9XkJ7hBYRBkPAX+PZ63dXmZuYWRUeQdL/gx6Bmr5122QpMjx/GlxkNf9TgZmYqNlpGegTH257j8eMLg+2x47jpNip0jwcHTbT0Ct+/Dvh/ZzXldC6BnAJCKwvenAJ4O5Hjjy51mBBNBy8WBWfF2hR51vgSK/Z0PwaWaP9tIramKbcOmP7bDUXx8LRyT+NO7WE4H0tpbCqJPlUMA40MKGsGysR0K7XJuhYJA0WErqqnFVV5Pgd8/+5o7OzBLdOqe6tk1jjQOfQ+QivqxYMIGKTqZBL9cZrgjitOs+MA2X2r1SfB2jL+vuCwZ1U/5O8fS3GHWBH6yveAzXzoKs+EegfZmBZL2enaUl7I1YUDXSXGQ4l6D4PCDS6/m6DrHDCQ1QZFBreDaw+farkAyeS2cgYvPed1hoHzFLUfvuodTYB/Xb+f8IGkpML7Y5fBfTxpTmBQEecYI481lriJBYbLh0G5v8SI3ujJgaCWGsj/EAxuxxiqnULgl3xHVj7/lOTPULJrdzE3+icDV/1ye4zNNe7acyrBwghRHrzecsQsHXmB14HJBoddxKDYMJDmT0S5sj1l47rewParYyhXw5Ar8Vs7daanqzKw4ZyArZ4vdt4e/9fIp181nwX4goG8oMZgUm7NgbihaPAXQFNwPqxSchRWHJesUQQ6i1REcm8ydVBQae4ImeSpPgjybPcEuRwJ3OatAOVLoGeT/Ca80cyq9kiBTDemeIntL3szHOVYg1Q1RvvDi94T3ah/rpinwotpQMJErxE2m3ymC4S2DLzMGbU24tIyMFJ3qvmkVUdqAJLZeKK6k5xxTHO9eC+XT3mqibCfbuRVNmBULupxMKDoWw+D7sVpChBKYQJoH4ic1wS974tpq+BVp79fIrOcyrhjoYw6yXxL2huC4XaHoT3H/g+KOFxpvsfaVYEcGBqeKKdyxWgAHMj7X/wd4jDG8f27Q7oa8sx8TJrZ4xWH+wWRSEpwPQn0mSV3zi0ir+cXF4+ccnOfVetn+rmD8UZGBA1Y/FRq9tPY4Nime/gSzn/aDwaS3Z+CUc5h8cCCMlWe3BHGx9qejReKyuHBfHEc190PVC+vZs7343oviX+dFXX3FqP+nfTzvsnC0wBgZ031hjpedi9B8XXZ0bS98cBUIM1+B5CPFYZvi7Sh+3VNv6k7PvwwMwnIjXpeY1YfIy21sjep9DBoxiKB7W6ebe1dhbwkyD1wmH7qXRnlpO9nA479yB3pGirWf2WWeL+dIGR5Ujne9dMbqVnf03Vb5p+j90jOSSbu54bexiI5EfuBVvRwo8eYwab8uH+Ftr43sXmt2FuArBp8Ei04tCKqvOcgF3eyyJfS6Zc8LuxA3dJRP/+GnextjowrcVPaLgcov6dRHA1lm5WWh0KIOkjrFkaF4nCCvTUFWznUMvCUorlirF4LPFJHPdKn/rxdpxeErl1Vu9u3bw3//8r8AAAD//7NUG+I=")
 	SupportedMap = make(map[string]bool)
 
 	for f, v := range unpacked {
