@@ -5,6 +5,8 @@ filebeat:
       - /var/log/hello1.log
       - /var/log/hello2.log
     index: logs-generic-default
+    vars:
+      var: value
 output:
   elasticsearch:
     hosts:
