@@ -18,12 +18,10 @@ rules:
 - map:
     path: inputsstreams
     rules:
-    - copy_to_list:
-        item: type
+    - copy_all_to_list:
         to: streams
-    - copy_to_list:
-        item: processors
-        to: streams
+        overwrite: false
+        except: ["streams", "id", "enabled"]
 
 - extract_list_items:
     path: inputsstreams
